[FIX] web: fix calendar controller width
Before this commit, the width of `.o_calendar_sidebar_container`was
dependent of `.o_calendar_sidebar`'s width. The problem is that the
sidebar container can contain other elements such as `#scheduling_box`
that don't have a fixed with, so they can make the sidebar grow/shrink.
The idea here is to set the fixed width to the container so the content
is adapted instead of the opposite

Bonus: It also fixes `.o_calendar_button_today`'s margin that made it
misaligned with the `#scheduling_box`

task-3424358
part of task-3326263

X-original-commit: 69ea739105764bccccdbee987b8f2629bf992654

--- a/addons/web/static/src/views/calendar/calendar_controller.scss
+++ b/addons/web/static/src/views/calendar/calendar_controller.scss
@@ -24,14 +24,12 @@ $o-cw-filter-avatar-size: 20px;
     background-color: $o-view-background-color;
     border-right: 1px solid $border-color;
     overflow-y: auto;
+    width: 240px;
+    @include media-breakpoint-up(xl){
+        width: 280px;
+    }
 
     .o_calendar_sidebar {
-        width: 200px;
-        font-size: 14px;
-
-        @include media-breakpoint-up("xl") {
-            width: 250px;
-        }
         // sync buttons are only displayed on calendar.event views
         .o_calendar_sync {
             padding-bottom: 0.5em;
